system/monitoring/monitoring/templates/http-routes-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana 
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
  hostnames:
   - "grafana.tomekz.party"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
