system/monitoring/monitoring/templates/http-routes-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus 
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
  hostnames:
   - "prometheus.tomekz.party"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
